--- a/forms_cadastro.html
+++ b/forms_cadastro.html
@@ -15,11 +15,13 @@
         <label for="email">E-mail</label>
         <input id="email" type="email" />
         <br />
-        <label for="senha">Senhal</label>
-        <input id="senha" type="senha" />
+        <label for="senha">Senha</label>
+        <input id="senha" type="password" />
         <br />
         <button type="submit">
             Cadastrar
+        </button>
+    </form>
 
 </body>
 </html>
